# pixmap-ops

./: .gitignore  CMakeLists.txt  README.md
src/: AGL.h  image.cpp  image.h  pixmap_art.cpp  pixmap_test.cpp
